--- a/signUpPage.css
+++ b/signUpPage.css
@@ -1,92 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
-
-body {
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.login_background {
-  background-image: url(images/stacked-waves-haikei.svg);
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
-  z-index: -1;
-}
-
-.signInContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  flex-direction: column;
-  padding: 40px;
-  height: 60vh;
-  width: 20rem;
-  background: rgba(255, 255, 255, 0.85);
-  border-radius: 20px;
-  margin: 10px;
-}
-
-.clientInput {
-  font-family: DM Sans, serif;
-  color: #1F2025;
-  border-style: none;
-  border-radius: 10px;
-  padding: 15px;
-  width: 220px;
-}
-
-::placeholder {
-    color: #A1A1A1;
-    opacity: .5;
-  }
+@import "signInPage.css";
 
 .clientInputContainer {
     height: 280px;
 }
 
-
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-}
-
-.signInButton {
-  font-family: DM Sans, serif;
-  font-size: medium;
-  border-style: none;
-  border-radius: 10px;
-  width: 150px;
-  height: 50px;
-  background: #3C49DD;
-  color: #F3FAFA;
-  margin-bottom: 20px;
-}
-
-.logo {
-  height: 60px;
-  width: 60px;
-}
-
-.labelText {
-    font-family: DM Sans, serif;
-    font-weight: 500;
-    padding: 5px 0 5px 0;
-}
-
-.signUpButton {
-    font-family: DM Sans, serif;
-    font-weight: 500;
-}
-
-.signUpButton:hover {
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.signInButton:hover {
-    background: #2734c0;
-    cursor: pointer;
-}
