--- a/dashboard.css
+++ b/dashboard.css
@@ -1,11 +1,95 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&display=swap');
+
 body {
     margin: 0 auto;
 }
 
 #mainContainer {
+    display: flex;
     height: 80vh;
-    width: 80rem;
+    width: 1200px;
     background: rgba(255, 255, 255, 0.85);
-    border-radius: 20px;
+    border-radius: 10px;
     margin: 20px;
+}
+
+.menuContainer {
+    display: flex;
+    flex-direction: column;
+    height: inherit;
+    width: 300px;
+    border-right: 1px solid #3C49DD;
+}
+
+.profileContainer {
+    display: flex;
+    align-items: center;
+    background-color: #3C49DD;
+    border-top-left-radius: 9px;
+    height: 10vh;
+}
+
+.profilePictureContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    background-color: aliceblue;
+    border-radius: 50%;
+    margin: 0 20px 0 20px;
+}
+
+.profilePicture {
+    width: 35px;
+    height: 35px;
+}
+
+.userNameText {
+    font-family: DM Sans, serif;
+    font-weight: 500;
+    color: #F3FAFA;
+    margin-right: 20px;
+}
+
+.userInfo {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.addUserContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 4vh;
+    border-bottom: 1px solid #3C49DD;
+}
+
+.usersListContainer {
+    height: 83%;
+    width: inherit;
+}
+
+#logOutIcon {
+    position: relative;
+    top: 93%;
+    left: 87%;
+    height: 25px;
+    width: 25px;
+}
+
+#logOutIcon:hover {
+    height: 27px;
+    width: 27px;
+}
+
+#addUserIcon {
+    height: 25px;
+    width: 25px;
+}
+
+#addUserIcon:hover {
+    height: 27px;
+    width: 27px;
 }
