--- a/dashboard.css
+++ b/dashboard.css
@@ -63,20 +63,19 @@ body {
     align-items: center;
     justify-content: center;
     height: 4vh;
-    border-bottom: 1px solid #3C49DD;
+    padding: 3px 0 3px 0;
+    border-bottom: 1px solid #9a9a9a;
 }
 
-.usersListContainer {
-    height: 83%;
+.contactsContainer {
+    height: 70%;
     width: inherit;
 }
 
 #logOutIcon {
-    position: relative;
-    top: 93%;
-    left: 87%;
     height: 25px;
     width: 25px;
+    padding: 10px;
 }
 
 #logOutIcon:hover {
@@ -97,44 +96,50 @@ body {
 .contact{
     display: flex;
     align-items: center;
+    justify-content: space-between;
     height: 10vh;
-    height: 100px;
-    border: 1px solid #E5E5E5;
+    width: inherit;
+    border-bottom: 1px solid #9a9a9a;
 }
 
 .activeContact{
     background-color: #3C49DD;
-    width: 7px;
-    height: 100%;
+    width: 5px;
+    height: 10vh;
 }
 
 .contactImageContainer{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     background-color: aliceblue;
     border-radius: 50%;
     margin: 0 15px 0 15px;
 }
 
 .contactImage{
-    height: 50px;
-    width: 50px;
+    height: 35px;
+    width: 35px;
 }
 
 .contactName{
     font-family: DM Sans, serif;
     font-weight: 500;
-    color: black;
-    margin-right: 20px;
+    color: #1F2025;
 }
 
 .contactsInfo {
     margin: 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.activePlusInfo {
+    display: flex;
+    justify-content: space-between;
 }
 
 .deleteContactContainer{
@@ -143,7 +148,8 @@ body {
 
 .chatContainer{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    padding: 15px;
 }
 
 .contactImageMessage{
@@ -160,13 +166,47 @@ body {
 
 }
 
-.textMessageContainer{
-    background-color: #E5E5E5;
-    border-radius: 20px;
-    padding: 18px;
-    margin: 30px;
+.receivedMessage {
+    width: 50%;
 }
 
-.textMessageRecieved{
+.sentMessage {
+    display: flex;
+    place-content: flex-end;
+    width: 100%;
+}
+
+.textMessageContainer{
+    background-color: #cbccde;
+    font-family: "DM Sans", serif;
+    color: #1F2025;
+    font-size: 14px;
+    border-radius: 20px;
+    padding: 15px;
+    margin: 10px;
+}
+
+.textMessageReceived{
     margin: 0;
+}
+
+.textMessageSend {
+    background-color: #3C49DD;
+    font-family: "DM Sans", serif;
+    color: #F3FAFA;
+    font-size: 14px;
+    border-radius: 20px;
+    padding: 15px;
+    margin: 10px;
+    width: 50%;
+}
+
+
+.logOutContainer {
+    display: flex;
+    align-items: center;
+    place-content: end;
+    height: 10vh;
+    width: inherit;
+
 }
