--- a/SingUp/Css/signUpPage.css
+++ b/SingUp/Css/signUpPage.css
@@ -8,7 +8,7 @@ body {
 }
 
 .login_background {
-    background-image: url(../images/stacked-waves-haikei.svg);
+    background-image: url(../../images/stacked-waves-haikei.svg);
     position: absolute;
     height: 100vh;
     width: 100vw;
@@ -99,3 +99,8 @@ body {
     background: #2734c0;
     cursor: pointer;
 }
+
+.clientInputContainer {
+    height: 280px;
+}
+
